--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://codyb.co",
+  "homepage": "https://covidodisha.github.io/portfolio-web",
   "description": "Portfolio site for Cody Bennett",
   "repository": "https://github.com/CodyJasonBennett/portfolio.git",
   "author": "Cody Bennett <hi@codyb.co>",
