--- a/package.json
+++ b/package.json
@@ -40,14 +40,11 @@
     "react-transition-group": "^4.4.2",
     "three": "^0.129.0"
   },
-  "scripts": {
-    "start": "set PORT=80 && craco start",
-    "build": "craco build",
-    "build-storybook": "build-storybook -o build-storybook",
-    "postbuild": "react-snap",
-    "test": "craco test",
-    "storybook": "start-storybook -p 9009 -s public",
-    "analyze": "source-map-explorer 'build/static/js/*.js'"
+      "scripts": {
++   "predeploy": "npm run build",
++   "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
   },
   "reactSnap": {
     "puppeteerArgs": [
